# fine-data-generation

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: compare_models.ipynb  train_sd35_lora.ipynb
src/fine_data_generation/: __init__.py  pipeline_attend_and_excite.py  run.py
src/fine_data_generation/utils/: vis_utils.py
utils/: ptp_utils.py  vis_utils.py
